feat(like): implement like module for posts and comments
